<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toobar_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:theme="@style/CustomActionBarTheme"
        android:padding="@dimen/detail_toolbar_padding_0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"/>

    <ImageView
        android:id="@+id/img_note"
        android:layout_width="@dimen/imageSize"
        android:layout_height="@dimen/imageSize"
        android:src="@drawable/transformer"
        android:layout_below="@+id/toobar_detail"
        android:layout_margin="@dimen/detail_image_margin_5dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_note"
        android:text="@string/detail_text_date"
        android:textSize="@dimen/detail_date_text_size_12sp"
        android:textStyle="normal"
        android:textColor="@color/detail_color_text_date"
        android:layout_alignParentRight="true"
        android:padding="@dimen/detail_date_padding_12dp"/>

    <EditText
        android:id="@+id/edt_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_hint_title"
        android:paddingLeft="@dimen/detail_hint_padding_10dp"
        android:singleLine="true"
        android:textColorHint="@color/detail_color_hint_title"
        android:textStyle="bold"
        android:textSize="@dimen/detail_hint_text_size_16sp"
        android:layout_below="@+id/tv_detail_date"/>

    <EditText
        android:id="@+id/edt_detail_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_hint_note"
        android:paddingLeft="@dimen/detail_hint_padding_10dp"
        android:textColorHint="@color/detail_color_hint_note"
        android:textStyle="bold"
        android:textSize="@dimen/detail_hint_text_size_16sp"
        android:layout_below="@+id/edt_detail_title"
        android:layout_marginTop="@dimen/detail_edit_margin_5dp"/>

    <ImageView
        android:id="@+id/img_alarm"
        android:layout_width="@dimen/alarmSize"
        android:layout_height="@dimen/alarmSize"
        android:src="@drawable/ic_alarm"
        android:layout_below="@id/edt_detail_note"
        android:padding="@dimen/detail_alarm_padding_10dp"
        android:layout_marginLeft="@dimen/detail_alarm_padding_10dp"/>

    <TextView
        android:id="@+id/tv_button_alarm"
        android:layout_width="@dimen/alarmSize"
        android:layout_height="@dimen/alarmSize"
        android:text="@string/detail_text_alarm"
        android:textStyle="normal"
        android:textSize="@dimen/detail_alarm_text_size_12sp"
        android:layout_below="@+id/edt_detail_note"
        android:layout_toRightOf="@+id/img_alarm"
        android:gravity="center" />
</RelativeLayout>